[gd_scene load_steps=4 format=3 uid="uid://b82ei7y1hs1qf"]

[ext_resource type="Script" path="res://ui/popups/player_info_box.gd" id="1_ohrqx"]
[ext_resource type="Theme" uid="uid://cblqb84whle2r" path="res://ui/bebus_theme.tres" id="2_pkgkq"]
[ext_resource type="Texture2D" uid="uid://b7ygbauek7olf" path="res://icon.svg" id="3_ccpe0"]

[node name="PlayerInfoBox" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_ohrqx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pkgkq")
bbcode_enabled = true
text = "[center][color=green]bdasfbus[center]"
fit_content = true
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ccpe0")
stretch_mode = 5

[node name="LapLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pkgkq")
text = "laps: 0"
horizontal_alignment = 1
